Up to date to original project

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         </nav>
     </header>
     <!---------------------- MAIN CONTENT ---------------------->
-    <main>
+    <main class="container">
         <!---------------------- HOME - HERO SECTION ---------------------->
-        <section class="home" id="home">
+        <section class="home section" id="home">
             <div class="home__container container grid">
 
                 <div class="home__data">
@@ -107,7 +107,7 @@
 
                     <h3 class="features__title">Best Prices</h3>
                     <!-- TODO: Replace lorem with actual description -->
-                    <p class="services__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+                    <p class="features__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
                         recusandae neque excepturi laboriosam id maiores eius.</p>
                 </div>
 
@@ -140,7 +140,7 @@
             <h2 class="section-title">Here's Our Product</h2>
 
             <div class="product__container">
-                <img src="assets/img/pill-bottle-w-logo.png" alt="" class="prodcut__img">
+                <img src="assets/img/pill-bottle-w-logo.png" alt="" class="product__img">
                 <h3 class="product__name">Ufit Gummies</h3>
                 <span class="product__price">$ 40</span>
                 <a href="#" class="button">View</a>
